[gd_scene load_steps=5 format=3 uid="uid://dl8dg3a5a4wmm"]

[ext_resource type="PackedScene" uid="uid://b8opucxucl032" path="res://world/world.tscn" id="1_ahbxc"]
[ext_resource type="Script" path="res://scenes/map_generator/map_generator.gd" id="1_e3o2j"]
[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="2_3461h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kg8ff"]
bg_color = Color(0.0784314, 0.0745098, 0.0588235, 1)

[node name="MapGenerator" type="Node2D"]
script = ExtResource("1_e3o2j")

[node name="World" parent="." instance=ExtResource("1_ahbxc")]

[node name="SelectionUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="PanelContainer" type="PanelContainer" parent="SelectionUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_3461h")
theme_override_styles/panel = SubResource("StyleBoxFlat_kg8ff")

[node name="MarginContainer" type="MarginContainer" parent="SelectionUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="SelectionUI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Players: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamNum" type="SpinBox" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 7.0
value = 7.0
rounded = true
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
text = "Island Size"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IslandSizeSlider" type="HSlider" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 0.1
max_value = 1.0
step = 0.01
value = 0.25

[node name="HBoxContainer3" type="HBoxContainer" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="InstantGenerate" type="Label" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Instant"

[node name="InstantButton" type="CheckButton" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="GenerateBtn" type="Button" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Generate another map"

[node name="PlayBtn" type="Button" parent="SelectionUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Play this map"

[connection signal="value_changed" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer/TeamNum" to="." method="_on_team_num_value_changed"]
[connection signal="drag_ended" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer2/IslandSizeSlider" to="." method="_on_island_size_slider_drag_ended"]
[connection signal="value_changed" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer2/IslandSizeSlider" to="." method="_on_island_size_slider_value_changed"]
[connection signal="toggled" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/HBoxContainer3/InstantButton" to="." method="_on_instant_button_toggled"]
[connection signal="pressed" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/GenerateBtn" to="." method="_on_generate_btn_pressed"]
[connection signal="pressed" from="SelectionUI/PanelContainer/MarginContainer/HBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
